--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div id="page">
     <header id="header">
       <div class="main-header clearfix">
-        <h1>Balance Media's Vertical Timeline</h1>
+        <h1>Timeline</h1>
       </div>
     </header>
 
